# Multimeter_TivaC

./: .ccsproject  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  README.md  ac_sensor.cpp  ac_sensor.hpp  adc_multimeter.c  adc_multimeter.cpp  adc_multimeter.h  adc_multimeter.hpp  core_measure_task.c  core_measure_task.cpp  core_measure_task.h  flash.gdbinit  freeRTOS_hook.c  freeRTOS_hook.h  freertos_demo.c  general_timer.cpp  general_timer.hpp  hardware_helper.cpp  hardware_helper.hpp  input_output.c  input_output.h  main.c  main.cpp  measurement.h  multimeter_core_task.c  multimeter_core_task.h  multimeter_main.c  multimeter_ozone.jdebug  test_main.cpp  tm4c123gh6pm_startup_ccs_gcc.c  toolchain.cmake  uart_util.c  uart_util.cpp  (+4 more)
.launches/: freertos_demo.launch
Debug/: .gitignore  ac_sensor.asm  adc_multimeter.asm  adc_sensor.asm  buttons.asm  ccsObjs.opt  core_measure_task.asm  croutine.asm  dma_manager.asm  event_groups.asm  freeRTOS_hook.asm  freertos_demo_linkInfo.xml  general_timer.asm  hardware_helper.asm  heap_2.asm  list.asm  main.asm  makefile  objects.mk  port.asm  queue.asm  rgb.asm  softuart.asm  sources.mk  startup_ccs.asm  stream_buffer.asm  subdir_rules.mk  subdir_vars.mk  tasks.asm  timers.asm  uart_util.asm  uartstdio.asm  user_io_task.asm  ustdlib.asm
Debug/adc_sensor/: subdir_rules.mk  subdir_vars.mk
Debug/dma_manager/: subdir_rules.mk  subdir_vars.mk
Debug/drivers/: subdir_rules.mk  subdir_vars.mk
Debug/general_timer/: subdir_rules.mk  subdir_vars.mk
Debug/hardware_helper/: subdir_rules.mk  subdir_vars.mk
Debug/multimeter/: subdir_rules.mk  subdir_vars.mk
Debug/optimizerAssistant/opt_for_speed__0/: ac_sensor.asm  adc_multimeter.asm  buttons.asm  ccsObjs.opt  core_measure_task.asm  croutine.asm  event_groups.asm  freeRTOS_hook.asm  freertos_demo_linkInfo.xml  general_timer.asm  hardware_helper.asm  heap_2.asm  list.asm  main.asm  makefile  port.asm  queue.asm  rgb.asm  softuart.asm  startup_ccs.asm  stream_buffer.asm  subdir_vars.mk  tasks.asm  timers.asm  uart_util.asm  (+3 more)
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  free_rtos_utils.cpp  free_rtos_utils.hpp
adc_sensor/: #adc_sensor.cpp#  adc_sensor.cpp  adc_sensor.hpp
bluetooth/: CMakeLists.txt  bluetooth_manager.cpp  bluetooth_manager.hpp  uart_util.cpp  uart_util.hpp
common/: CMakeLists.txt
common/action/: CMakeLists.txt  action_def.hpp
common/task/: CMakeLists.txt  base_task.cpp  base_task.hpp
core_sensor/: CMakeLists.txt  ac_voltage_sensor.cpp  ac_voltage_sensor.hpp  core_sensor_manager.cpp  core_sensor_manager.hpp  current_sensor.cpp  current_sensor.hpp  dc_voltage_sensor.cpp  dc_voltage_sensor.hpp  sensor.cpp  sensor.hpp
core_sensor/manager/: CMakeLists.txt  ac_voltage_sensor.cpp  ac_voltage_sensor.hpp  adc.cpp  core_sensor_manager.cpp  core_sensor_manager.hpp  current_sensor.cpp  current_sensor.hpp  dc_voltage_sensor.cpp  resistance_sensor.cpp  resistance_sensor.hpp
core_sensor/manager/filter/: CMakeLists.txt  ac_bandpass_filter.cpp  ac_bandpass_filter.hpp  band_pass_filter.m  low_pass_filter.m
core_sensor/subscriber/: CMakeLists.txt  core_sensor_subscriber.cpp  core_sensor_subscriber.hpp
display/: CMakeLists.txt  display_manager.cpp  display_manager.hpp
display/animation/: CMakeLists.txt  display_animation.cpp  display_animation.hpp  display_base_animation.hpp
display/icon/: CMakeLists.txt  display_icon.cpp  display_icon.hpp
display/widget/: CMakeLists.txt  display_core_sensor_data_widget.cpp  display_core_sensor_data_widget.hpp  display_core_sensor_title_widget.cpp  display_core_sensor_title_widget.hpp  display_extra_sensor_widget.cpp  display_extra_sensor_widget.hpp  display_measure_data_widget.cpp  display_measure_data_widget.hpp  display_measure_title_widget.cpp  display_measure_title_widget.hpp  display_widgets.hpp
display/widget/base/: CMakeLists.txt  display_base_widget.cpp  display_base_widget.hpp
dma_manager/: dma_manager.cpp  dma_manager.hpp
extra_sensor/: CMakeLists.txt  extra_sensor_manager.cpp  extra_sensor_manager.hpp
extra_sensor/manager/: CMakeLists.txt  extra_sensor_manager.cpp  extra_sensor_manager.hpp
extra_sensor/manager/ds3231_tivaC/include/: ds3231.h
extra_sensor/manager/ds3231_tivaC/src/: ds3231.c  main.c
extra_sensor/manager/htu21d_tivaC/src/: main.c
extra_sensor/subscriber/: CMakeLists.txt  extra_sensor_subscriber.cpp  extra_sensor_subscriber.hpp
hardware_helper/: hardware_helper.cpp  hardware_helper.hpp
input_handler/: CMakeLists.txt  input_handler.cpp  input_handler.hpp
input_handler/button_group/: CMakeLists.txt
input_handler/rotary_encoder/: CMakeLists.txt  rotary_encoder.cpp  rotary_encoder.hpp
main_sensor/: ac_voltage_sensor.cpp  ac_voltage_sensor.hpp  adc.cpp  adc.hpp  current_sensor.cpp  dc_voltage_sensor.cpp  main_sensor_manager.cpp  main_sensor_manager.hpp  resistance_sensor.cpp  resistance_sensor.hpp  sensor.cpp  sensor.hpp
multimeter/: CMakeLists.txt  ac_sensor.cpp  ac_sensor.hpp  adc_multimeter.cpp  adc_multimeter.hpp  arm_fir_example_f32.c  core_measure_task.cpp  core_measure_task.hpp  dc_voltage_sensor.cpp  freeRTOS_hook.c  input_handler.cpp  input_handler.hpp  main.cpp  measurement_switcher.cpp  measurement_switcher.hpp  multimeter_mode.cpp  multimeter_mode.hpp  old_code.txt  sensor.cpp  test_task.cpp  test_task.hpp  uart_util.hpp
multimeter_sensor/: ac_voltage_sensor.cpp  ac_voltage_sensor.hpp  adc.cpp  adc.hpp  current_sensor.cpp  dc_voltage_sensor.cpp  dc_voltage_sensor.hpp  sensor.hpp
pcb/tiva_multimeter/: _autosave-tiva_multimeter.sch  fp-info-cache  tiva_multimeter-cache.lib  tiva_multimeter.sch  tiva_multimeter.sch-bak
tiva_utils/: bit_manipulation.h
tivaware/usblib/: usblib.h
tivaware/utils/: CMakeLists.txt
user_input/: CMakeLists.txt
user_input/manager/: CMakeLists.txt  user_input_manager.cpp  user_input_manager.hpp
user_input/manager/button_group/: button_group.hpp
user_input/manager/rotary_encoder/: CMakeLists.txt  rotary_encoder.hpp
user_input/subscriber/: CMakeLists.txt  user_input_subscriber.cpp  user_input_subscriber.hpp
(+129 files in other folders)
